[tool.poetry]
name = "rlalm"
version = "0.1.0"
description = ""
authors = ["Merijn68 <merijn.vanmiltenburg@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.2"
gym = "<0.24"
ray = {extras = ["rllib"], version = "2.2"}
pygame = "^2.1.3"
gymnasium = "^0.27.1"
tensorflow-probability = "^0.19.0"
torch = "1.11.0"
setuptools = "^67.3.2"
tensorflow = "<2.11"
torchaudio = "0.11.0"
torchvision = "0.12.0"
conda-lock = "^1.4.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
Flask = "^2.2.3"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
